test/parallel/sync/waynew/record3.good
record3.chpl:10: error: sync/single types cannot be of type 'R'
